# colab-assist

./: CHANGELOG.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: README.md  api.md  releases.md
src/colab_assist/: _colab.py  colab_assist.py
src/colab_utils/: __init__.py  colab_utils.py
src/colast/: colast.py
tests/: test_colab_assist.py
