[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colab-utils"
version = "0.1.0"
description = "Convenience utilities for development workflows on Google Colab"
authors = [
    {name = "dd-n-kk", email = "djlstvn.cs03@gmail.com"}
]
readme = "docs/README.md"
keywords = ["Colab", "Google", "GitHub", "uv", "workflow", "cloud"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
requires-python = ">=3.10, <3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel",
    "mkdocs-material",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/dd-n-kk/colab-utils"
Documentation = "https://readthedocs.org"
Issues = "https://github.com/dd-n-kk/colab-utils/issues"
